--- a/src/epub/text/endnotes-book7.xhtml
+++ b/src/epub/text/endnotes-book7.xhtml
@@ -171,6 +171,147 @@
 				<li id="note-07-54" epub:type="endnote">
 					<p>The meaning of this passage is uncertain and the interpretations various; see the long note in the ed. of Baumgarten-Crusius. The meaning of <i xml:lang="la">super manus</i> is particularly dark; the most plausible suggestion is that it is equivalent to <i xml:lang="la">ante se</i>. <a href="chapter-7.xhtml#noteref-54" epub:type="se:referrer">↩</a></p>
 				</li>
+				<!--end Galba notes-->
+				<li id="note-08-1" epub:type="endnote">
+					<p>Like Maecenas, Otho was <i xml:lang="la">Tyrrhena regum progenies</i>; Hor. <i>Odes</i>, 3.29.1. <a href="chapter-8.xhtml#noteref-1" epub:type="se:referrer">↩</a></p>
+				</li>
+				<li id="note-08-2" epub:type="endnote">
+					<p>See <i>Claud.</i>  xiii and xxxv.2. <a href="chapter-8.xhtml#noteref-2" epub:type="se:referrer">↩</a></p>
+				</li>
+				<li id="note-08-3" epub:type="endnote">
+					<p>Suetonius does not mention this among the conspiracies against Claudius; see <i>Claud.</i> xiii. <a href="chapter-8.xhtml#noteref-3" epub:type="se:referrer">↩</a></p>
+				</li>
+				<li id="note-08-4" epub:type="endnote">
+					<p>Instead of the modern blanket a <i xml:lang="la">sagum</i>, or military cloak, was used, whence the operation was called <i xml:lang="la">sagatio</i>. <a href="chapter-8.xhtml#noteref-4" epub:type="se:referrer">↩</a></p>
+				</li>
+				<li id="note-08-5" epub:type="endnote">
+					<p>The penalty for extortion was expulsion from the senate; see <i>Jul.</i> xliii.1. <a href="chapter-8.xhtml#noteref-5" epub:type="se:referrer">↩</a></p>
+				</li>
+				<li id="note-08-6" epub:type="endnote">
+					<p>See note on <i>Nero</i>, xxxiv.2. <a href="chapter-8.xhtml#noteref-6" epub:type="se:referrer">↩</a></p>
+				</li>
+				<li id="note-08-7" epub:type="endnote">
+					<p>According to Tac. Ann. 13.45, the marriage was a real one, as is also implied below; see note <i>d</i>. <a href="chapter-8.xhtml#noteref-7" epub:type="se:referrer">↩</a></p>
+				</li>
+				<li id="note-08-8" epub:type="endnote">
+					<p>See note <i>c</i> above. <a href="chapter-8.xhtml#noteref-8" epub:type="se:referrer">↩</a></p>
+				</li>
+				<li id="note-08-9" epub:type="endnote">
+					<p>Tacitus and Plutarch give Ptolemaeus as the name of the astrologer. <a href="chapter-8.xhtml#noteref-9" epub:type="se:referrer">↩</a></p>
+				</li>
+				<li id="note-08-10" epub:type="endnote">
+					<p>Between the adoption and the death of Galba, a space of five days. <a href="chapter-8.xhtml#noteref-10" epub:type="se:referrer">↩</a></p>
+				</li>
+				<li id="note-08-11" epub:type="endnote">
+					<p>A pillar covered with gilded bronze, erected by Augustus, in 20 <span class="small">B.C.</span>, on which were engraved the names of the principal cities of the empire and their distance from Rome. The Roman roads were supposed to converge at that point, but the distances on them were reckoned from the gates. <a href="chapter-8.xhtml#noteref-11" epub:type="se:referrer">↩</a></p>
+				</li>
+				<li id="note-08-12" epub:type="endnote">
+					<p>Proverbial of undertaking something beyond one's powers; <i>cf.</i> Cic. <i>ad Att.</i> <span class="small">II</span>.16. <a href="chapter-8.xhtml#noteref-12" epub:type="se:referrer">↩</a></p>
+				</li>
+				<li id="note-08-13" epub:type="endnote">
+					<p>To Ostia. <a href="chapter-8.xhtml#noteref-13" epub:type="se:referrer">↩</a></p>
+				</li>
+				<li id="note-08-14" epub:type="endnote">
+					<p>Of the armoury. <a href="chapter-8.xhtml#noteref-14" epub:type="se:referrer">↩</a></p>
+				</li>
+				<li id="note-08-15" epub:type="endnote">
+					<p>This difficult passage is obscure because of its brevity and perhaps through corruption of the text. The same story is told by Tacitus (<i>Hist.</i> 1.80) and Plutarch (<i>Otho</i>, 3), but the three accounts seem to vary. According to Suetonius the arms were sent from the praetorian camp to Ostia, to fit out the (eighteenth) cohort, and the riot started in the praetorian camp; the account of Tacitus seems to imply that it was the soldiers from Ostia (joined by the praetorians) that burst into Otho's dining-room: <i xml:lang="la">insidentes equis urbem <i>ac Palatium</i> petunt</i>. The arms in question would seem to be a part of those belonging to the cohort; hence <i xml:lang="la">remitti</i>. See however Hofstee, <i>ad loc.</i> <a href="chapter-8.xhtml#noteref-15" epub:type="se:referrer">↩</a></p>
+				</li>
+				<li id="note-08-16" epub:type="endnote">
+					<p>From the temple of Mars, to be carried through the streets in the sacred procession. To begin any enterprise during that time was considered unlucky, and weddings were avoided; see Ovid, <i>Fasti</i>, <span class="small">III</span>.393. <a href="chapter-8.xhtml#noteref-16" epub:type="se:referrer">↩</a></p>
+				</li>
+				<li id="note-08-17" epub:type="endnote">
+					<p>Cybele, whose festival was from March 24 to 30. <a href="chapter-8.xhtml#noteref-17" epub:type="se:referrer">↩</a></p>
+				</li>
+				<li id="note-08-18" epub:type="endnote">
+					<p>Tacitus, <i>Hist.</i> 2.24, says <i xml:lang="la">locus Castorum</i> (= <i xml:lang="la">Castoris et Pollucis</i>) <i xml:lang="la">vocatur</i>, and that it was twelve miles from Cremona. There was probably a temple there to the Twin Brethren. <a href="chapter-8.xhtml#noteref-18" epub:type="se:referrer">↩</a></p>
+				</li>
+				<!--end of notes for Otho-->
+				<li id="note-09-1" epub:type="endnote">
+					<p>See Tac. Ann. 2.48. <a href="chapter-9.xhtml#noteref-1" epub:type="se:referrer">↩</a></p>
+				</li>
+				<li id="note-09-2" epub:type="endnote">
+					<p>See <i>Calig.</i> xiv.3. <a href="chapter-9.xhtml#noteref-2" epub:type="se:referrer">↩</a></p>
+				</li>
+				<li id="note-09-3" epub:type="endnote">
+					<p>See <i>Claud.</i> xxix.1. <a href="chapter-9.xhtml#noteref-3" epub:type="se:referrer">↩</a></p>
+				</li>
+				<li id="note-09-4" epub:type="endnote">
+					<p>See <i>Claud.</i> xxi.2. <a href="chapter-9.xhtml#noteref-4" epub:type="se:referrer">↩</a></p>
+				</li>
+				<li id="note-09-5" epub:type="endnote">
+					<p>See <i>Tib.</i> xliii.1. <a href="chapter-9.xhtml#noteref-5" epub:type="se:referrer">↩</a></p>
+				</li>
+				<li id="note-09-6" epub:type="endnote">
+					<p>See <i>Nero</i>, xii.3 and xxi. <a href="chapter-9.xhtml#noteref-6" epub:type="se:referrer">↩</a></p>
+				</li>
+				<li id="note-09-7" epub:type="endnote">
+					<p>A faction in the Circus; see note on <i>Calig.</i> lv.2. <a href="chapter-9.xhtml#noteref-7" epub:type="se:referrer">↩</a></p>
+				</li>
+				<li id="note-09-8" epub:type="endnote">
+					<p><i xml:lang="la">Supinis manibus</i>, "with hands uplifted," to the gods in gratitude. <a href="chapter-9.xhtml#noteref-8" epub:type="se:referrer">↩</a></p>
+				</li>
+				<li id="note-09-9" epub:type="endnote">
+					<p>See <i>Aug.</i> xxxii.2. <a href="chapter-9.xhtml#noteref-9" epub:type="se:referrer">↩</a></p>
+				</li>
+				<li id="note-09-10" epub:type="endnote">
+					<p>See <i>Aug.</i> lxxiii and the note. See also Seneca, <i>De Tranq. An.</i> 1.5, <i xml:lang="la">placet . . . non ex arcula prolata vestis . . . sed domestica et vilis, nec servata nec sumenda sollicite</i>. <a href="chapter-9.xhtml#noteref-10" epub:type="se:referrer">↩</a></p>
+				</li>
+				<li id="note-09-11" epub:type="endnote">
+					<p>Vienne, on the Rhone. <a href="chapter-9.xhtml#noteref-11" epub:type="se:referrer">↩</a></p>
+				</li>
+				<li id="note-09-12" epub:type="endnote">
+					<p>See chap. xviii below. <a href="chapter-9.xhtml#noteref-12" epub:type="se:referrer">↩</a></p>
+				</li>
+				<li id="note-09-13" epub:type="endnote">
+					<p>In deserting Galba for Otho. <a href="chapter-9.xhtml#noteref-13" epub:type="se:referrer">↩</a></p>
+				</li>
+				<li id="note-09-14" epub:type="endnote">
+					<p>Modern Cologne. <a href="chapter-9.xhtml#noteref-14" epub:type="se:referrer">↩</a></p>
+				</li>
+				<li id="note-09-15" epub:type="endnote">
+					<p>See note <i>c</i> on <i>Calig.</i> liv.2. The connection suggests an orgy in celebration of his victory. <a href="chapter-9.xhtml#noteref-15" epub:type="se:referrer">↩</a></p>
+				</li>
+				<li id="note-09-16" epub:type="endnote">
+					<p>A day of special ill omen because of the defeat by the Gauls in 390 <span class="small">B.C.</span> <a href="chapter-9.xhtml#noteref-16" epub:type="se:referrer">↩</a></p>
+				</li>
+				<li id="note-09-17" epub:type="endnote">
+					<p><i xml:lang="la">Dominicus</i> (<i xml:lang="la">liber</i>) was the name applied to a collection of Nero's compositions. <a href="chapter-9.xhtml#noteref-17" epub:type="se:referrer">↩</a></p>
+				</li>
+				<li id="note-09-18" epub:type="endnote">
+					<p>A drink made of sour wine or vinegar mixed with water. <a href="chapter-9.xhtml#noteref-18" epub:type="se:referrer">↩</a></p>
+				</li>
+				<li id="note-09-19" epub:type="endnote">
+					<p>The <i xml:lang="la">ientaculum</i> was ordinarily a very light breakfast; Vitellius made a banquet of it. <a href="chapter-9.xhtml#noteref-19" epub:type="se:referrer">↩</a></p>
+				</li>
+				<li id="note-09-20" epub:type="endnote">
+					<p>Probably referring to the colossal statue of Athena Promachos on the Acropolis at Athens. Plin. <i>N. H.</i> xxxv.163 ff., says that the platter cost a million sesterces, and that to make it a special furnace was built in the open fields. <a href="chapter-9.xhtml#noteref-20" epub:type="se:referrer">↩</a></p>
+				</li>
+				<li id="note-09-21" epub:type="endnote">
+					<p>That is, from the eastern to the western limits of the Roman world. <a href="chapter-9.xhtml#noteref-21" epub:type="se:referrer">↩</a></p>
+				</li>
+				<li id="note-09-22" epub:type="endnote">
+					<p>See <i>Calig.</i> liv.2. <a href="chapter-9.xhtml#noteref-22" epub:type="se:referrer">↩</a></p>
+				</li>
+				<li id="note-09-23" epub:type="endnote">
+					<p><i xml:lang="la">Vernaculus</i> and <i xml:lang="la">verna</i> are used by Martial 10.3.1 and 1.41.2 in the sense of "buffoons," a meaning derived from the proverbial insolence of the <i xml:lang="la">vernae</i>, or home-born slaves. The connection of the word here with <i xml:lang="la">mathematicis</i>, and the fact that only the astrologers are mentioned in what follows, would seem to imply that the lampoons of these jesters contained predictions about Vitellius. <a href="chapter-9.xhtml#noteref-23" epub:type="se:referrer">↩</a></p>
+				</li>
+				<li id="note-09-24" epub:type="endnote">
+					<p>That is, the astrologers, for whom <i xml:lang="la">Chaldaei</i> became a general term. <a href="chapter-9.xhtml#noteref-24" epub:type="se:referrer">↩</a></p>
+				</li>
+				<li id="note-09-25" epub:type="endnote">
+					<p>See note on <i>Jul.</i> lxxx.2. <a href="chapter-9.xhtml#noteref-25" epub:type="se:referrer">↩</a></p>
+				</li>
+				<li id="note-09-26" epub:type="endnote">
+					<p>As a sign that he was willing to renounce the power of life and death over the people; Tac. <i>Hist.</i> 3. 68. <a href="chapter-9.xhtml#noteref-26" epub:type="se:referrer">↩</a></p>
+				</li>
+				<li id="note-09-27" epub:type="endnote">
+					<p>Chap. ix, above. <a href="chapter-9.xhtml#noteref-27" epub:type="se:referrer">↩</a></p>
+				</li>
+				<li id="note-09-28" epub:type="endnote">
+					<p><i xml:lang="la">Gallus</i> means "a cock," as well as "a Gaul." <a href="chapter-9.xhtml#noteref-28" epub:type="se:referrer">↩</a></p>
+				</li>
+				<!--end of notes for Vitellius-->
 			</ol>
 		</section>
 	</body>
