Fixed missing endnotes problem.

--- a/src/epub/text/endnotes.xhtml
+++ b/src/epub/text/endnotes.xhtml
@@ -2686,6 +2686,237 @@
 				<li id="note-891" epub:type="endnote">
 					<p>The old homestead at Cutiliae, near Reate; see <i>Vesp.</i> xxiv. <a href="book-8.xhtml#noteref-891" epub:type="se:referrer">↩</a></p>
 				</li>
+				<li id="note-892" epub:type="endnote">
+					<p>Various quarters and streets of the city were designated in this way; <i>cf.</i> <i xml:lang="la">ad Capita Bubula</i>, <i>Aug.</i> v; <i xml:lang="la">ad Pirum</i>, Mart. 1.117.6. <i xml:lang="la">Ad Malum Punicum</i> was a street on the Quirinal hill, probably corresponding with the modern Via delle Quattro Fontane; see Platner, <i>Topography of Rome</i>, p485. <a href="book-8.xhtml#noteref-892" epub:type="se:referrer">↩</a></p>
+				</li>
+				<li id="note-893" epub:type="endnote">
+					<p><i>Cf.</i> <i>Otho</i>, xii.1, at the end. <a href="book-8.xhtml#noteref-893" epub:type="se:referrer">↩</a></p>
+				</li>
+				<li id="note-894" epub:type="endnote">
+					<p>See note on <i>Galba</i>, i. <a href="book-8.xhtml#noteref-894" epub:type="se:referrer">↩</a></p>
+				</li>
+				<li id="note-895" epub:type="endnote">
+					<p>As son of the emperor. <a href="book-8.xhtml#noteref-895" epub:type="se:referrer">↩</a></p>
+				</li>
+				<li id="note-896" epub:type="endnote">
+					<p>That is, in the provinces. <a href="book-8.xhtml#noteref-896" epub:type="se:referrer">↩</a></p>
+				</li>
+				<li id="note-897" epub:type="endnote">
+					<p>He was but eighteen years old at the time. <a href="book-8.xhtml#noteref-897" epub:type="se:referrer">↩</a></p>
+				</li>
+				<li id="note-898" epub:type="endnote">
+					<p>The usual procedure for a youthful prince; <i>cf.</i> <i>Tib.</i> vi.4. <a href="book-8.xhtml#noteref-898" epub:type="se:referrer">↩</a></p>
+				</li>
+				<li id="note-899" epub:type="endnote">
+					<p>See note on <i>Galba</i>, vi.1. The reference is to his consulships before he became emperor; see chap. xiii.3. <a href="book-8.xhtml#noteref-899" epub:type="se:referrer">↩</a></p>
+				</li>
+				<li id="note-900" epub:type="endnote">
+					<p>That is, twice as large as his brother's. <a href="book-8.xhtml#noteref-900" epub:type="se:referrer">↩</a></p>
+				</li>
+				<li id="note-901" epub:type="endnote">
+					<p>Titus had the ability to do this; <i>cf.</i> <i>Tit.</i> iii.2, at the end. <a href="book-8.xhtml#noteref-901" epub:type="se:referrer">↩</a></p>
+				</li>
+				<li id="note-902" epub:type="endnote">
+					<p>See chaps.  ix and xi.1. <a href="book-8.xhtml#noteref-902" epub:type="se:referrer">↩</a></p>
+				</li>
+				<li id="note-903" epub:type="endnote">
+					<p>See note on <i>Vesp.</i> ix.1. <a href="book-8.xhtml#noteref-903" epub:type="se:referrer">↩</a></p>
+				</li>
+				<li id="note-904" epub:type="endnote">
+					<p>See note on <i>Claud.</i> xxi.2. <a href="book-8.xhtml#noteref-904" epub:type="se:referrer">↩</a></p>
+				</li>
+				<li id="note-905" epub:type="endnote">
+					<p>See note on <i>Claud.</i> xxi.3. <a href="book-8.xhtml#noteref-905" epub:type="se:referrer">↩</a></p>
+				</li>
+				<li id="note-906" epub:type="endnote">
+					<p>As well as in poetry. <a href="book-8.xhtml#noteref-906" epub:type="se:referrer">↩</a></p>
+				</li>
+				<li id="note-907" epub:type="endnote">
+					<p>Established for the worship of the deified Flavian emperors, after the manner of the Augustales; see note on <i>Claud.</i> vi.2. <a href="book-8.xhtml#noteref-907" epub:type="se:referrer">↩</a></p>
+				</li>
+				<li id="note-908" epub:type="endnote">
+					<p>See <i>Aug.</i> lxxi.3. <a href="book-8.xhtml#noteref-908" epub:type="se:referrer">↩</a></p>
+				</li>
+				<li id="note-909" epub:type="endnote">
+					<p>While the spectators remained in their seats; <i>cf.</i> Dio, 67.4. <a href="book-8.xhtml#noteref-909" epub:type="se:referrer">↩</a></p>
+				</li>
+				<li id="note-910" epub:type="endnote">
+					<p>Represented in many cases by <i xml:lang="la">tesserae</i>, or tickets; see note on <i>Aug.</i> xli.2. <a href="book-8.xhtml#noteref-910" epub:type="se:referrer">↩</a></p>
+				</li>
+				<li id="note-911" epub:type="endnote">
+					<p>In 80; it had previously been destroyed by fire in 69; see <i>Vit.</i> xv.3. <a href="book-8.xhtml#noteref-911" epub:type="se:referrer">↩</a></p>
+				</li>
+				<li id="note-912" epub:type="endnote">
+					<p>Who finished and dedicated it; it was also called the <i xml:lang="la">Forum Transitorium</i> because it connected the Forum of Augustus with the Forum Pacis, as well as the Subura with the Forum Romanum. It occupied a part of the Argiletum. <a href="book-8.xhtml#noteref-912" epub:type="se:referrer">↩</a></p>
+				</li>
+				<li id="note-913" epub:type="endnote">
+					<p>Or Music Hall. <a href="book-8.xhtml#noteref-913" epub:type="se:referrer">↩</a></p>
+				</li>
+				<li id="note-914" epub:type="endnote">
+					<p>See chap. iv.2. <a href="book-8.xhtml#noteref-914" epub:type="se:referrer">↩</a></p>
+				</li>
+				<li id="note-915" epub:type="endnote">
+					<p>Tac. <i>Agr.</i> 39 says that his unjustified triumph over the Germans (and the Dacians) was a laughing-stock. <a href="book-8.xhtml#noteref-915" epub:type="se:referrer">↩</a></p>
+				</li>
+				<li id="note-916" epub:type="endnote">
+					<p>See <i>Nero</i>, xvi.2. <a href="book-8.xhtml#noteref-916" epub:type="se:referrer">↩</a></p>
+				</li>
+				<li id="note-917" epub:type="endnote">
+					<p>See <i>Aug.</i> lxxiv. <a href="book-8.xhtml#noteref-917" epub:type="se:referrer">↩</a></p>
+				</li>
+				<li id="note-918" epub:type="endnote">
+					<p>See <i>Calig.</i> lv.2. <a href="book-8.xhtml#noteref-918" epub:type="se:referrer">↩</a></p>
+				</li>
+				<li id="note-919" epub:type="endnote">
+					<p>See chap. xiv.2. <a href="book-8.xhtml#noteref-919" epub:type="se:referrer">↩</a></p>
+				</li>
+				<li id="note-920" epub:type="endnote">
+					<p>That is, those which had formerly been restricted to the senatorial order. <a href="book-8.xhtml#noteref-920" epub:type="se:referrer">↩</a></p>
+				</li>
+				<li id="note-921" epub:type="endnote">
+					<p>Where the soldiers deposited their surplus money with the general for safe keeping, until the end of their term of service; see Veget. 2.20 and for fuller details Grenfell, Hunt, and Hogarth, "Fayoum Towns and their Papyri," pp252 ff., where the accounts of two soldiers of about the year 180 are published. <a href="book-8.xhtml#noteref-921" epub:type="se:referrer">↩</a></p>
+				</li>
+				<li id="note-922" epub:type="endnote">
+					<p>That is, raised the amount from nine to twelve <i xml:lang="la">aurei</i>. The <i xml:lang="la">aureus</i> contained 100 sesterces and was equal to a little over a pound sterling, or five dollars. <a href="book-8.xhtml#noteref-922" epub:type="se:referrer">↩</a></p>
+				</li>
+				<li id="note-923" epub:type="endnote">
+					<p>That is, to gain favour with influential men or their advocates; <i>cf.</i> <i>Tib.</i> xxxiii. <a href="book-8.xhtml#noteref-923" epub:type="se:referrer">↩</a></p>
+				</li>
+				<li id="note-924" epub:type="endnote">
+					<p><i>Cf.</i> <i>Nero</i>, xvii. <a href="book-8.xhtml#noteref-924" epub:type="se:referrer">↩</a></p>
+				</li>
+				<li id="note-925" epub:type="endnote">
+					<p>That is, all who sat in judgment on the same case. <a href="book-8.xhtml#noteref-925" epub:type="se:referrer">↩</a></p>
+				</li>
+				<li id="note-926" epub:type="endnote">
+					<p>As censor. <a href="book-8.xhtml#noteref-926" epub:type="se:referrer">↩</a></p>
+				</li>
+				<li id="note-927" epub:type="endnote">
+					<p>
+						<i>De nefanda Venere.</i>
+						<a href="book-8.xhtml#noteref-927" epub:type="se:referrer">↩</a>
+					</p>
+				</li>
+				<li id="note-928" epub:type="endnote">
+					<p><i>Georg.</i> 2.537. <a href="book-8.xhtml#noteref-928" epub:type="se:referrer">↩</a></p>
+				</li>
+				<li id="note-929" epub:type="endnote">
+					<p>Probably referring to new senators, entering the House for the first time. <a href="book-8.xhtml#noteref-929" epub:type="se:referrer">↩</a></p>
+				</li>
+				<li id="note-930" epub:type="endnote">
+					<p>Nothing is known of this law. Livy, 21.63.3‑4 mentions a law of Q. Claudius, which forbade senators to engage in business, and that law may have had a chapter referring to the <i xml:lang="la">scribae quaestorii</i> and other "civil servants"; or, as some suppose, Publius Clodius may have passed such a law. <a href="book-8.xhtml#noteref-930" epub:type="se:referrer">↩</a></p>
+				</li>
+				<li id="note-931" epub:type="endnote">
+					<p>That is, charges which resulted in the confiscation of the goods of the accused to the privy purse. <a href="book-8.xhtml#noteref-931" epub:type="se:referrer">↩</a></p>
+				</li>
+				<li id="note-932" epub:type="endnote">
+					<p>See chap. iii.1. <a href="book-8.xhtml#noteref-932" epub:type="se:referrer">↩</a></p>
+				</li>
+				<li id="note-933" epub:type="endnote">
+					<p>Implying unfairness on the part of Domitian, who favoured the Thracians; <i>cf.</i> Pliny, <i>Paneg.</i> xi and xxxiii. <a href="book-8.xhtml#noteref-933" epub:type="se:referrer">↩</a></p>
+				</li>
+				<li id="note-934" epub:type="endnote">
+					<p>There is an added insult in <i xml:lang="la">parmularius</i>, "one armed with the buckler," "a Thracian," as applied to a Roman citizen (<i xml:lang="la">pater familias</i>). <a href="book-8.xhtml#noteref-934" epub:type="se:referrer">↩</a></p>
+				</li>
+				<li id="note-935" epub:type="endnote">
+					<p>See chap. i.3. <a href="book-8.xhtml#noteref-935" epub:type="se:referrer">↩</a></p>
+				</li>
+				<li id="note-936" epub:type="endnote">
+					<p>Part of a course of training; <i>cf.</i> <i>Nero</i>, xx.1. <a href="book-8.xhtml#noteref-936" epub:type="se:referrer">↩</a></p>
+				</li>
+				<li id="note-937" epub:type="endnote">
+					<p>See <i>Nero</i>, xlix.2. <a href="book-8.xhtml#noteref-937" epub:type="se:referrer">↩</a></p>
+				</li>
+				<li id="note-938" epub:type="endnote">
+					<p>A tax of two drachmas a head, imposed by Titus in return for free permission to practise their religion; see Josephus, <i>Bell. Jud.</i> 7.6.6. <a href="book-8.xhtml#noteref-938" epub:type="se:referrer">↩</a></p>
+				</li>
+				<li id="note-939" epub:type="endnote">
+					<p>These were doubtless Christians, whom the Romans commonly confounded with the Jews. <a href="book-8.xhtml#noteref-939" epub:type="se:referrer">↩</a></p>
+				</li>
+				<li id="note-940" epub:type="endnote">
+					<p>See <i>Vesp.</i> iii. <a href="book-8.xhtml#noteref-940" epub:type="se:referrer">↩</a></p>
+				</li>
+				<li id="note-941" epub:type="endnote">
+					<p><i>Iliad,</i> 2.204. <a href="book-8.xhtml#noteref-941" epub:type="se:referrer">↩</a></p>
+				</li>
+				<li id="note-942" epub:type="endnote">
+					<p><i xml:lang="la">Pulvinar</i> here means the couch for the images of the gods; <i>cf.</i> <i>Aug.</i> xlv.1. <a href="book-8.xhtml#noteref-942" epub:type="se:referrer">↩</a></p>
+				</li>
+				<li id="note-943" epub:type="endnote">
+					<p>See chap. iv.5. <a href="book-8.xhtml#noteref-943" epub:type="se:referrer">↩</a></p>
+				</li>
+				<li id="note-944" epub:type="endnote">
+					<p>See note on <i>Aug.</i> liii.1. <a href="book-8.xhtml#noteref-944" epub:type="se:referrer">↩</a></p>
+				</li>
+				<li id="note-945" epub:type="endnote">
+					<p>See chap. iv.4. <a href="book-8.xhtml#noteref-945" epub:type="se:referrer">↩</a></p>
+				</li>
+				<li id="note-946" epub:type="endnote">
+					<p><i xml:lang="la">Arci</i> is a transliteration of the Greek word <i xml:lang="grc">ἀρκεῖ</i> with a pun on its resemblance in sound to <i xml:lang="la">arcus</i>, "arch." <a href="book-8.xhtml#noteref-946" epub:type="se:referrer">↩</a></p>
+				</li>
+				<li id="note-947" epub:type="endnote">
+					<p>See chap. vii.2. <a href="book-8.xhtml#noteref-947" epub:type="se:referrer">↩</a></p>
+				</li>
+				<li id="note-948" epub:type="endnote">
+					<p><i>Cf.</i> Ovid, <i>Fasti</i>, 1.357. <a href="book-8.xhtml#noteref-948" epub:type="se:referrer">↩</a></p>
+				</li>
+				<li id="note-949" epub:type="endnote">
+					<p>A toga ornamented with horizontal stripes of purple, worn by knights on public occasions, as well as by the early kings and the consuls; Tac. <i>Ann.</i> 3.2; Val. Max. 3.2.9. <a href="book-8.xhtml#noteref-949" epub:type="se:referrer">↩</a></p>
+				</li>
+				<li id="note-950" epub:type="endnote">
+					<p>According to Plin. <i>N. H.</i> xxxvi.163, a hard, white, translucent stone discovered in Cappadocia in the reign of Nero. According to Tzetzes, <i>Lyc.</i> 98, <i xml:lang="grc">φεγγίτης</i>= <i xml:lang="grc">σεληνίτης</i>, "moonstone." Pliny also mentions similar mirrors of black obsidian; <i>N. H.</i> xxxvi.196. <a href="book-8.xhtml#noteref-950" epub:type="se:referrer">↩</a></p>
+				</li>
+				<li id="note-951" epub:type="endnote">
+					<p><i>Cf.</i> <i>Nero</i>, xl.2. <a href="book-8.xhtml#noteref-951" epub:type="se:referrer">↩</a></p>
+				</li>
+				<li id="note-952" epub:type="endnote">
+					<p><i>Cf.</i> <i>Nero</i>, xlix.4. <a href="book-8.xhtml#noteref-952" epub:type="se:referrer">↩</a></p>
+				</li>
+				<li id="note-953" epub:type="endnote">
+					<p>It was evidently on a metal plate, attached to the marble base. <a href="book-8.xhtml#noteref-953" epub:type="se:referrer">↩</a></p>
+				</li>
+				<li id="note-954" epub:type="endnote">
+					<p>See <i>Vesp.</i> v.4. <a href="book-8.xhtml#noteref-954" epub:type="se:referrer">↩</a></p>
+				</li>
+				<li id="note-955" epub:type="endnote">
+					<p>Fortuna Primigenia; <i>cf.</i> <i>Tib.</i> xliii.1. <a href="book-8.xhtml#noteref-955" epub:type="se:referrer">↩</a></p>
+				</li>
+				<li id="note-956" epub:type="endnote">
+					<p>Including the burning of the body, to prevent the fulfilment of the prophecy. <a href="book-8.xhtml#noteref-956" epub:type="se:referrer">↩</a></p>
+				</li>
+				<li id="note-957" epub:type="endnote">
+					<p>Niece of Domitian. <a href="book-8.xhtml#noteref-957" epub:type="se:referrer">↩</a></p>
+				</li>
+				<li id="note-958" epub:type="endnote">
+					<p>See <i>Aug.</i> vii.1. <a href="book-8.xhtml#noteref-958" epub:type="se:referrer">↩</a></p>
+				</li>
+				<li id="note-959" epub:type="endnote">
+					<p>This in its connection suggests the blush of modesty, but <i>cf.</i> Tac. <i>Agr.</i> 45, <i xml:lang="la">ille vultus et rubor quo se contra pudorem muniebat</i>; and in general, Sen. <i>Epist.</i> 11.3. Doubtless Domitian's ruddy complexion was a recommendation in his youth. <a href="book-8.xhtml#noteref-959" epub:type="se:referrer">↩</a></p>
+				</li>
+				<li id="note-960" epub:type="endnote">
+					<p><i>Iliad</i>, 21.108. <a href="book-8.xhtml#noteref-960" epub:type="se:referrer">↩</a></p>
+				</li>
+				<li id="note-961" epub:type="endnote">
+					<p><i>Cf.</i> <i>Tit.</i> v.2. The bow and arrow were not included by the Romans in the term <i xml:lang="la">arma</i>. <a href="book-8.xhtml#noteref-961" epub:type="se:referrer">↩</a></p>
+				</li>
+				<li id="note-962" epub:type="endnote">
+					<p><i>Cf.</i>  chap. ii.2. <a href="book-8.xhtml#noteref-962" epub:type="se:referrer">↩</a></p>
+				</li>
+				<li id="note-963" epub:type="endnote">
+					<p>The great library of Ptolemy Philadelphus at Alexandria was destroyed during Caesar's Alexandrine war. The Pergamene library was given by Antony to Cleopatra and transferred to Alexandria, where it was kept in the temple of Serapis. It was frequently damaged during civil disturbances. Burman thinks that the reference is to the latter; but the plural suggests both. <a href="book-8.xhtml#noteref-963" epub:type="se:referrer">↩</a></p>
+				</li>
+				<li id="note-964" epub:type="endnote">
+					<p>Named after C. Matius, a friend of Augustus and a writer on cookery and gardening. <a href="book-8.xhtml#noteref-964" epub:type="se:referrer">↩</a></p>
+				</li>
+				<li id="note-965" epub:type="endnote">
+					<p><i>Cf.</i> <i>Juv.</i> ii.32 f. <a href="book-8.xhtml#noteref-965" epub:type="se:referrer">↩</a></p>
+				</li>
+				<li id="note-966" epub:type="endnote">
+					<p>Votive shields, adorned with the emperor's image; see <i>Calig.</i> xvi.4. <a href="book-8.xhtml#noteref-966" epub:type="se:referrer">↩</a></p>
+				</li>
+				<li id="note-967" epub:type="endnote">
+					<p>The Capitoline hill was sometimes called <i xml:lang="la">mons Tarpeius</i>, from the Tarpeian Rock at its south-west corner. It was not, however, the original name of the hill, as some Roman antiquarians supposed. <a href="book-8.xhtml#noteref-967" epub:type="se:referrer">↩</a></p>
+				</li>
 			</ol>
 		</section>
 	</body>
