--- a/src/epub/toc.xhtml
+++ b/src/epub/toc.xhtml
@@ -1543,194 +1543,194 @@
 					<a href="text/book-8.xhtml">Book <span epub:type="z3998:roman">VIII</span></a>
 					<ol>
 						<li>
-							<a href="text/book-8.xhtml#chapter-1">The Life of Vespasian</a>
+							<a href="text/book-8.xhtml#chapter-8-1">The Life of Vespasian</a>
 							<ol>
 								<li>
-									<a href="text/book-8.xhtml#chapter-10-1" epub:type="z3998:roman">I</a>
+									<a href="text/book-8.xhtml#chapter-8-1-1" epub:type="z3998:roman">I</a>
 								</li>
 								<li>
-									<a href="text/book-8.xhtml#chapter-10-2" epub:type="z3998:roman">II</a>
+									<a href="text/book-8.xhtml#chapter-8-1-2" epub:type="z3998:roman">II</a>
 								</li>
 								<li>
-									<a href="text/book-8.xhtml#chapter-10-3" epub:type="z3998:roman">III</a>
+									<a href="text/book-8.xhtml#chapter-8-1-3" epub:type="z3998:roman">III</a>
 								</li>
 								<li>
-									<a href="text/book-8.xhtml#chapter-10-4" epub:type="z3998:roman">IV</a>
+									<a href="text/book-8.xhtml#chapter-8-1-4" epub:type="z3998:roman">IV</a>
 								</li>
 								<li>
-									<a href="text/book-8.xhtml#chapter-10-5" epub:type="z3998:roman">V</a>
+									<a href="text/book-8.xhtml#chapter-8-1-5" epub:type="z3998:roman">V</a>
 								</li>
 								<li>
-									<a href="text/book-8.xhtml#chapter-10-6" epub:type="z3998:roman">VI</a>
+									<a href="text/book-8.xhtml#chapter-8-1-6" epub:type="z3998:roman">VI</a>
 								</li>
 								<li>
-									<a href="text/book-8.xhtml#chapter-10-7" epub:type="z3998:roman">VII</a>
+									<a href="text/book-8.xhtml#chapter-8-1-7" epub:type="z3998:roman">VII</a>
 								</li>
 								<li>
-									<a href="text/book-8.xhtml#chapter-10-8" epub:type="z3998:roman">VIII</a>
+									<a href="text/book-8.xhtml#chapter-8-1-8" epub:type="z3998:roman">VIII</a>
 								</li>
 								<li>
-									<a href="text/book-8.xhtml#chapter-10-9" epub:type="z3998:roman">IX</a>
+									<a href="text/book-8.xhtml#chapter-8-1-9" epub:type="z3998:roman">IX</a>
 								</li>
 								<li>
-									<a href="text/book-8.xhtml#chapter-10-10" epub:type="z3998:roman">X</a>
+									<a href="text/book-8.xhtml#chapter-8-1-10" epub:type="z3998:roman">X</a>
 								</li>
 								<li>
-									<a href="text/book-8.xhtml#chapter-10-11" epub:type="z3998:roman">XI</a>
+									<a href="text/book-8.xhtml#chapter-8-1-11" epub:type="z3998:roman">XI</a>
 								</li>
 								<li>
-									<a href="text/book-8.xhtml#chapter-10-12" epub:type="z3998:roman">XII</a>
+									<a href="text/book-8.xhtml#chapter-8-1-12" epub:type="z3998:roman">XII</a>
 								</li>
 								<li>
-									<a href="text/book-8.xhtml#chapter-10-13" epub:type="z3998:roman">XIII</a>
+									<a href="text/book-8.xhtml#chapter-8-1-13" epub:type="z3998:roman">XIII</a>
 								</li>
 								<li>
-									<a href="text/book-8.xhtml#chapter-10-14" epub:type="z3998:roman">XIV</a>
+									<a href="text/book-8.xhtml#chapter-8-1-14" epub:type="z3998:roman">XIV</a>
 								</li>
 								<li>
-									<a href="text/book-8.xhtml#chapter-10-15" epub:type="z3998:roman">XV</a>
+									<a href="text/book-8.xhtml#chapter-8-1-15" epub:type="z3998:roman">XV</a>
 								</li>
 								<li>
-									<a href="text/book-8.xhtml#chapter-10-16" epub:type="z3998:roman">XVI</a>
+									<a href="text/book-8.xhtml#chapter-8-1-16" epub:type="z3998:roman">XVI</a>
 								</li>
 								<li>
-									<a href="text/book-8.xhtml#chapter-10-17" epub:type="z3998:roman">XVII</a>
+									<a href="text/book-8.xhtml#chapter-8-1-17" epub:type="z3998:roman">XVII</a>
 								</li>
 								<li>
-									<a href="text/book-8.xhtml#chapter-10-18" epub:type="z3998:roman">XVIII</a>
+									<a href="text/book-8.xhtml#chapter-8-1-18" epub:type="z3998:roman">XVIII</a>
 								</li>
 								<li>
-									<a href="text/book-8.xhtml#chapter-10-19" epub:type="z3998:roman">XIX</a>
+									<a href="text/book-8.xhtml#chapter-8-1-19" epub:type="z3998:roman">XIX</a>
 								</li>
 								<li>
-									<a href="text/book-8.xhtml#chapter-10-20" epub:type="z3998:roman">XX</a>
+									<a href="text/book-8.xhtml#chapter-8-1-20" epub:type="z3998:roman">XX</a>
 								</li>
 								<li>
-									<a href="text/book-8.xhtml#chapter-10-21" epub:type="z3998:roman">XXI</a>
+									<a href="text/book-8.xhtml#chapter-8-1-21" epub:type="z3998:roman">XXI</a>
 								</li>
 								<li>
-									<a href="text/book-8.xhtml#chapter-10-22" epub:type="z3998:roman">XXII</a>
+									<a href="text/book-8.xhtml#chapter-8-1-22" epub:type="z3998:roman">XXII</a>
 								</li>
 								<li>
-									<a href="text/book-8.xhtml#chapter-10-23" epub:type="z3998:roman">XXIII</a>
+									<a href="text/book-8.xhtml#chapter-8-1-23" epub:type="z3998:roman">XXIII</a>
 								</li>
 								<li>
-									<a href="text/book-8.xhtml#chapter-10-24" epub:type="z3998:roman">XXIV</a>
+									<a href="text/book-8.xhtml#chapter-8-1-24" epub:type="z3998:roman">XXIV</a>
 								</li>
 								<li>
-									<a href="text/book-8.xhtml#chapter-10-25" epub:type="z3998:roman">XXV</a>
+									<a href="text/book-8.xhtml#chapter-8-1-25" epub:type="z3998:roman">XXV</a>
 								</li>
 							</ol>
 						</li>
 						<li>
-							<a href="text/book-8.xhtml#chapter-2">The Life of Titus</a>
+							<a href="text/book-8.xhtml#chapter-8-2">The Life of Titus</a>
 							<ol>
 								<li>
-									<a href="text/book-8.xhtml#chapter-11-1" epub:type="z3998:roman">I</a>
+									<a href="text/book-8.xhtml#chapter-8-2-1" epub:type="z3998:roman">I</a>
 								</li>
 								<li>
-									<a href="text/book-8.xhtml#chapter-11-2" epub:type="z3998:roman">II</a>
+									<a href="text/book-8.xhtml#chapter-8-2-2" epub:type="z3998:roman">II</a>
 								</li>
 								<li>
-									<a href="text/book-8.xhtml#chapter-11-3" epub:type="z3998:roman">III</a>
+									<a href="text/book-8.xhtml#chapter-8-2-3" epub:type="z3998:roman">III</a>
 								</li>
 								<li>
-									<a href="text/book-8.xhtml#chapter-11-4" epub:type="z3998:roman">IV</a>
+									<a href="text/book-8.xhtml#chapter-8-2-4" epub:type="z3998:roman">IV</a>
 								</li>
 								<li>
-									<a href="text/book-8.xhtml#chapter-11-5" epub:type="z3998:roman">V</a>
+									<a href="text/book-8.xhtml#chapter-8-2-5" epub:type="z3998:roman">V</a>
 								</li>
 								<li>
-									<a href="text/book-8.xhtml#chapter-11-6" epub:type="z3998:roman">VI</a>
+									<a href="text/book-8.xhtml#chapter-8-2-6" epub:type="z3998:roman">VI</a>
 								</li>
 								<li>
-									<a href="text/book-8.xhtml#chapter-11-7" epub:type="z3998:roman">VII</a>
+									<a href="text/book-8.xhtml#chapter-8-2-7" epub:type="z3998:roman">VII</a>
 								</li>
 								<li>
-									<a href="text/book-8.xhtml#chapter-11-8" epub:type="z3998:roman">VIII</a>
+									<a href="text/book-8.xhtml#chapter-8-2-8" epub:type="z3998:roman">VIII</a>
 								</li>
 								<li>
-									<a href="text/book-8.xhtml#chapter-11-9" epub:type="z3998:roman">IX</a>
+									<a href="text/book-8.xhtml#chapter-8-2-9" epub:type="z3998:roman">IX</a>
 								</li>
 								<li>
-									<a href="text/book-8.xhtml#chapter-11-10" epub:type="z3998:roman">X</a>
+									<a href="text/book-8.xhtml#chapter-8-2-10" epub:type="z3998:roman">X</a>
 								</li>
 								<li>
-									<a href="text/book-8.xhtml#chapter-11-11" epub:type="z3998:roman">XI</a>
+									<a href="text/book-8.xhtml#chapter-8-2-11" epub:type="z3998:roman">XI</a>
 								</li>
 							</ol>
 						</li>
 						<li>
-							<a href="text/book-8.xhtml#chapter-3">The Life of Domitian</a>
+							<a href="text/book-8.xhtml#chapter-8-3">The Life of Domitian</a>
 							<ol>
 								<li>
-									<a href="text/book-8.xhtml#chapter-11-1" epub:type="z3998:roman">I</a>
+									<a href="text/book-8.xhtml#chapter-8-3-1" epub:type="z3998:roman">I</a>
 								</li>
 								<li>
-									<a href="text/book-8.xhtml#chapter-11-2" epub:type="z3998:roman">II</a>
+									<a href="text/book-8.xhtml#chapter-8-3-2" epub:type="z3998:roman">II</a>
 								</li>
 								<li>
-									<a href="text/book-8.xhtml#chapter-11-3" epub:type="z3998:roman">III</a>
+									<a href="text/book-8.xhtml#chapter-8-3-3" epub:type="z3998:roman">III</a>
 								</li>
 								<li>
-									<a href="text/book-8.xhtml#chapter-11-4" epub:type="z3998:roman">IV</a>
+									<a href="text/book-8.xhtml#chapter-8-3-4" epub:type="z3998:roman">IV</a>
 								</li>
 								<li>
-									<a href="text/book-8.xhtml#chapter-11-5" epub:type="z3998:roman">V</a>
+									<a href="text/book-8.xhtml#chapter-8-3-5" epub:type="z3998:roman">V</a>
 								</li>
 								<li>
-									<a href="text/book-8.xhtml#chapter-11-6" epub:type="z3998:roman">VI</a>
+									<a href="text/book-8.xhtml#chapter-8-3-6" epub:type="z3998:roman">VI</a>
 								</li>
 								<li>
-									<a href="text/book-8.xhtml#chapter-11-6" epub:type="z3998:roman">VII</a>
+									<a href="text/book-8.xhtml#chapter-8-3-6" epub:type="z3998:roman">VII</a>
 								</li>
 								<li>
-									<a href="text/book-8.xhtml#chapter-11-8" epub:type="z3998:roman">VIII</a>
+									<a href="text/book-8.xhtml#chapter-8-3-8" epub:type="z3998:roman">VIII</a>
 								</li>
 								<li>
-									<a href="text/book-8.xhtml#chapter-11-9" epub:type="z3998:roman">IX</a>
+									<a href="text/book-8.xhtml#chapter-8-3-9" epub:type="z3998:roman">IX</a>
 								</li>
 								<li>
-									<a href="text/book-8.xhtml#chapter-11-10" epub:type="z3998:roman">X</a>
+									<a href="text/book-8.xhtml#chapter-8-3-10" epub:type="z3998:roman">X</a>
 								</li>
 								<li>
-									<a href="text/book-8.xhtml#chapter-11-11" epub:type="z3998:roman">XI</a>
+									<a href="text/book-8.xhtml#chapter-8-3-11" epub:type="z3998:roman">XI</a>
 								</li>
 								<li>
-									<a href="text/book-8.xhtml#chapter-11-12" epub:type="z3998:roman">XII</a>
+									<a href="text/book-8.xhtml#chapter-8-3-12" epub:type="z3998:roman">XII</a>
 								</li>
 								<li>
-									<a href="text/book-8.xhtml#chapter-11-12" epub:type="z3998:roman">XIII</a>
+									<a href="text/book-8.xhtml#chapter-8-3-12" epub:type="z3998:roman">XIII</a>
 								</li>
 								<li>
-									<a href="text/book-8.xhtml#chapter-11-14" epub:type="z3998:roman">XIV</a>
+									<a href="text/book-8.xhtml#chapter-8-3-14" epub:type="z3998:roman">XIV</a>
 								</li>
 								<li>
-									<a href="text/book-8.xhtml#chapter-11-15" epub:type="z3998:roman">XV</a>
+									<a href="text/book-8.xhtml#chapter-8-3-15" epub:type="z3998:roman">XV</a>
 								</li>
 								<li>
-									<a href="text/book-8.xhtml#chapter-11-16" epub:type="z3998:roman">XVI</a>
+									<a href="text/book-8.xhtml#chapter-8-3-16" epub:type="z3998:roman">XVI</a>
 								</li>
 								<li>
-									<a href="text/book-8.xhtml#chapter-11-17" epub:type="z3998:roman">XVII</a>
+									<a href="text/book-8.xhtml#chapter-8-3-17" epub:type="z3998:roman">XVII</a>
 								</li>
 								<li>
-									<a href="text/book-8.xhtml#chapter-11-18" epub:type="z3998:roman">XVIII</a>
+									<a href="text/book-8.xhtml#chapter-8-3-18" epub:type="z3998:roman">XVIII</a>
 								</li>
 								<li>
-									<a href="text/book-8.xhtml#chapter-11-18" epub:type="z3998:roman">XIX</a>
+									<a href="text/book-8.xhtml#chapter-8-3-18" epub:type="z3998:roman">XIX</a>
 								</li>
 								<li>
-									<a href="text/book-8.xhtml#chapter-11-20" epub:type="z3998:roman">XX</a>
+									<a href="text/book-8.xhtml#chapter-8-3-20" epub:type="z3998:roman">XX</a>
 								</li>
 								<li>
-									<a href="text/book-8.xhtml#chapter-11-21" epub:type="z3998:roman">XXI</a>
+									<a href="text/book-8.xhtml#chapter-8-3-21" epub:type="z3998:roman">XXI</a>
 								</li>
 								<li>
-									<a href="text/book-8.xhtml#chapter-11-22" epub:type="z3998:roman">XXII</a>
+									<a href="text/book-8.xhtml#chapter-8-3-22" epub:type="z3998:roman">XXII</a>
 								</li>
 								<li>
-									<a href="text/book-8.xhtml#chapter-11-22" epub:type="z3998:roman">XXIII</a>
+									<a href="text/book-8.xhtml#chapter-8-3-22" epub:type="z3998:roman">XXIII</a>
 								</li>
 							</ol>
 						</li>
