Modernize hyphenation and spelling

--- a/src/epub/text/endnotes.xhtml
+++ b/src/epub/text/endnotes.xhtml
@@ -332,7 +332,7 @@
 					<p>See chap. ci. <a href="book-2.xhtml#noteref-107" epub:type="se:referrer">↩</a></p>
 				</li>
 				<li id="note-108" epub:type="endnote">
-					<p>Suetonius is brief to the point of obscurity. The idea seems to be that the intentions of Augustus in establishing the principate, and the effect of the new régime on the public welfare, were equally good. <a href="book-2.xhtml#noteref-108" epub:type="se:referrer">↩</a></p>
+					<p>Suetonius is brief to the point of obscurity. The idea seems to be that the intentions of Augustus in establishing the principate, and the effect of the new regime on the public welfare, were equally good. <a href="book-2.xhtml#noteref-108" epub:type="se:referrer">↩</a></p>
 				</li>
 				<li id="note-109" epub:type="endnote">
 					<p><i xml:lang="la">Latericiam</i> is strictly “of sun-dried brick.” <a href="book-2.xhtml#noteref-109" epub:type="se:referrer">↩</a></p>
@@ -477,7 +477,7 @@
 					<p>The form of purchase consisted in thrice touching a balance (<i xml:lang="la">libra</i>) with a penny (<i xml:lang="la">as</i>), in the presence of the praetor. <a href="book-2.xhtml#noteref-155" epub:type="se:referrer">↩</a></p>
 				</li>
 				<li id="note-156" epub:type="endnote">
-					<p>A record of the events of the imperial household. The custom of keeping such a day-book apparently dated from the time of Augustus. See Friedländer, <i>Roman Life and Manners</i> (Eng. Trans.), <span epub:type="z3998:roman">IV</span>, p56. <a href="book-2.xhtml#noteref-156" epub:type="se:referrer">↩</a></p>
+					<p>A record of the events of the imperial household. The custom of keeping such a daybook apparently dated from the time of Augustus. See Friedländer, <i>Roman Life and Manners</i> (Eng. Trans.), <span epub:type="z3998:roman">IV</span>, p56. <a href="book-2.xhtml#noteref-156" epub:type="se:referrer">↩</a></p>
 				</li>
 				<li id="note-157" epub:type="endnote">
 					<p>The host usually occupied the <i xml:lang="la">summus locus</i> on the <i xml:lang="la">imus lectus</i>. <a href="book-2.xhtml#noteref-157" epub:type="se:referrer">↩</a></p>
@@ -510,7 +510,7 @@
 					<p><i><abbr>Cf.</abbr></i> chap. lvi.1 and the note. <a href="book-2.xhtml#noteref-166" epub:type="se:referrer">↩</a></p>
 				</li>
 				<li id="note-167" epub:type="endnote">
-					<p>A double word-play on <i xml:lang="la">orbem</i>, “round drum” and “world,” and <i xml:lang="la">temperat</i>, “beats” and “sways.” <a href="book-2.xhtml#noteref-167" epub:type="se:referrer">↩</a></p>
+					<p>A double wordplay on <i xml:lang="la">orbem</i>, “round drum” and “world,” and <i xml:lang="la">temperat</i>, “beats” and “sways.” <a href="book-2.xhtml#noteref-167" epub:type="se:referrer">↩</a></p>
 				</li>
 				<li id="note-168" epub:type="endnote">
 					<p>Probably referring to Livia. <a href="book-2.xhtml#noteref-168" epub:type="se:referrer">↩</a></p>
@@ -573,7 +573,7 @@
 					<p>That is, without a blanket over his feet, because he had his shoes on. <a href="book-2.xhtml#noteref-187" epub:type="se:referrer">↩</a></p>
 				</li>
 				<li id="note-188" epub:type="endnote">
-					<p><i xml:lang="la">Lucubratoriam</i>, “for working by lamp-light.” <a href="book-2.xhtml#noteref-188" epub:type="se:referrer">↩</a></p>
+					<p><i xml:lang="la">Lucubratoriam</i>, “for working by lamplight.” <a href="book-2.xhtml#noteref-188" epub:type="se:referrer">↩</a></p>
 				</li>
 				<li id="note-189" epub:type="endnote">
 					<p>The so‑called “Roman nose.” <a href="book-2.xhtml#noteref-189" epub:type="se:referrer">↩</a></p>
@@ -1109,7 +1109,7 @@
 					<p>See <i><abbr>Aug.</abbr></i> <span epub:type="z3998:roman">xxviii</span>.1 and ci.4. <a href="book-4.xhtml#noteref-365" epub:type="se:referrer">↩</a></p>
 				</li>
 				<li id="note-366" epub:type="endnote">
-					<p><i xml:lang="la">Ducentesimam</i> (sc. <i xml:lang="la">partem</i>), one half of one per cent. <a href="book-4.xhtml#noteref-366" epub:type="se:referrer">↩</a></p>
+					<p><i xml:lang="la">Ducentesimam</i> (sc. <i xml:lang="la">partem</i>), one half of one percent. <a href="book-4.xhtml#noteref-366" epub:type="se:referrer">↩</a></p>
 				</li>
 				<li id="note-367" epub:type="endnote">
 					<p>An error, since he was consul in 39, 40, and 41. <a href="book-4.xhtml#noteref-367" epub:type="se:referrer">↩</a></p>
@@ -1658,7 +1658,7 @@
 					<p>Chap. <span epub:type="z3998:roman">xiii</span>. <a href="book-5.xhtml#noteref-548" epub:type="se:referrer">↩</a></p>
 				</li>
 				<li id="note-549" epub:type="endnote">
-					<p>Of the praetorian guard, in the north-eastern part of the city. <a href="book-5.xhtml#noteref-549" epub:type="se:referrer">↩</a></p>
+					<p>Of the praetorian guard, in the northeastern part of the city. <a href="book-5.xhtml#noteref-549" epub:type="se:referrer">↩</a></p>
 				</li>
 				<li id="note-550" epub:type="endnote">
 					<p>Narcissus. <a href="book-5.xhtml#noteref-550" epub:type="se:referrer">↩</a></p>
@@ -1790,7 +1790,7 @@
 					<p>This had previously been done only at the theatre (see note on <i><abbr>Jul.</abbr></i> <span epub:type="z3998:roman">xxxix</span>.2); senators were first given special seats at the Circus by Claudius; See <i>Claud.</i> <span epub:type="z3998:roman">xxi</span>.3. <a href="book-6.xhtml#noteref-592" epub:type="se:referrer">↩</a></p>
 				</li>
 				<li id="note-593" epub:type="endnote">
-					<p>A tight-rope, sloping downwards across the arena; <i><abbr>cf.</abbr></i> <i>Galba</i>, <span epub:type="z3998:roman">vi</span>. <a href="book-6.xhtml#noteref-593" epub:type="se:referrer">↩</a></p>
+					<p>A tightrope, sloping downwards across the arena; <i><abbr>cf.</abbr></i> <i>Galba</i>, <span epub:type="z3998:roman">vi</span>. <a href="book-6.xhtml#noteref-593" epub:type="se:referrer">↩</a></p>
 				</li>
 				<li id="note-594" epub:type="endnote">
 					<p>The musicians, machinists, <abbr>etc.</abbr>; <i><abbr>cf.</abbr></i> <i>Claud.</i> <span epub:type="z3998:roman">xxxiv</span>.2. <a href="book-6.xhtml#noteref-594" epub:type="se:referrer">↩</a></p>
@@ -1934,7 +1934,7 @@
 					<p>To make more room for the procession, which passed through the Circus (Dio, 63.20). The reference is probably to the gateway at the eastern end, through which the procession entered and passed out again, after marching around the <i xml:lang="la">spina</i> (see note on <i>Claud.</i> <span epub:type="z3998:roman">xxi</span>.3). Suetonius mentions only the exit from the Circus. In his time the gateway was formed by the Arch of Vespasian and Titus, erected by Domitian in 81 <abbr class="era">AD</abbr> <a href="book-6.xhtml#noteref-640" epub:type="se:referrer">↩</a></p>
 				</li>
 				<li id="note-641" epub:type="endnote">
-					<p>That is, song-birds, as a compliments to Nero’s voice; the other offerings were also typical of his art and his triumph. <a href="book-6.xhtml#noteref-641" epub:type="se:referrer">↩</a></p>
+					<p>That is, songbirds, as a compliments to Nero’s voice; the other offerings were also typical of his art and his triumph. <a href="book-6.xhtml#noteref-641" epub:type="se:referrer">↩</a></p>
 				</li>
 				<li id="note-642" epub:type="endnote">
 					<p><i><abbr>Cf.</abbr></i> <i><abbr>Aug.</abbr></i> lxxxiv.2. <a href="book-6.xhtml#noteref-642" epub:type="se:referrer">↩</a></p>
@@ -2495,7 +2495,7 @@
 					<p>See note on <i>Galba</i>, <span epub:type="z3998:roman">x</span>.3. <a href="book-8.xhtml#noteref-827" epub:type="se:referrer">↩</a></p>
 				</li>
 				<li id="note-828" epub:type="endnote">
-					<p>A duty (<i xml:lang="la">portorium</i>) of two and a half per cent on imports and exports; <i><abbr>cf.</abbr></i> <i><abbr>Jul.</abbr></i> xliii.1. <a href="book-8.xhtml#noteref-828" epub:type="se:referrer">↩</a></p>
+					<p>A duty (<i xml:lang="la">portorium</i>) of two and a half percent on imports and exports; <i><abbr>cf.</abbr></i> <i><abbr>Jul.</abbr></i> xliii.1. <a href="book-8.xhtml#noteref-828" epub:type="se:referrer">↩</a></p>
 				</li>
 				<li id="note-829" epub:type="endnote">
 					<p>A position held by tried and skilful officers, especially centurions of the first grade (<i xml:lang="la">primipili</i>; <span epub:type="z3998:roman">CIL<span> <span class="smaller">III</span>.6809, <abbr>etc.</abbr>) <i><abbr>Cf.</abbr></i> Vegetius, <i>Epit. Rei Milit.</i> 2.10, <i xml:lang="la">is post longam probatamque militiam peritissimus omnium legebatur, ut recte doceret alios quod ipse cum laude fecisset</i>. <a href="book-8.xhtml#noteref-829" epub:type="se:referrer">↩</a></p>
@@ -2633,7 +2633,7 @@
 					<p>Of Augustus; see <i><abbr>Aug.</abbr></i> c.4. <a href="book-8.xhtml#noteref-873" epub:type="se:referrer">↩</a></p>
 				</li>
 				<li id="note-874" epub:type="endnote">
-					<p>The connection between the <i xml:lang="la">stella crinita</i> and the long hair of the Parthian king is obvious; it does not seem accidental that <i xml:lang="la">Calvina</i> is connected with <i xml:lang="la">calvus</i>, “bald,” though this word-play seems to have been overlooked. <a href="book-8.xhtml#noteref-874" epub:type="se:referrer">↩</a></p>
+					<p>The connection between the <i xml:lang="la">stella crinita</i> and the long hair of the Parthian king is obvious; it does not seem accidental that <i xml:lang="la">Calvina</i> is connected with <i xml:lang="la">calvus</i>, “bald,” though this wordplay seems to have been overlooked. <a href="book-8.xhtml#noteref-874" epub:type="se:referrer">↩</a></p>
 				</li>
 				<li id="note-875" epub:type="endnote">
 					<p>Claudius and Nero reigned thirteen and fourteen years respectively; Vespasian, ten; Titus, two; and Domitian, fifteen. <a href="book-8.xhtml#noteref-875" epub:type="se:referrer">↩</a></p>
@@ -2756,7 +2756,7 @@
 					<p>See chap. <span epub:type="z3998:roman">iv</span>.2. <a href="book-8.xhtml#noteref-914" epub:type="se:referrer">↩</a></p>
 				</li>
 				<li id="note-915" epub:type="endnote">
-					<p>Tac. <i>Agr.</i> 39 says that his unjustified triumph over the Germans (and the Dacians) was a laughing-stock. <a href="book-8.xhtml#noteref-915" epub:type="se:referrer">↩</a></p>
+					<p>Tac. <i>Agr.</i> 39 says that his unjustified triumph over the Germans (and the Dacians) was a laughingstock. <a href="book-8.xhtml#noteref-915" epub:type="se:referrer">↩</a></p>
 				</li>
 				<li id="note-916" epub:type="endnote">
 					<p>See <i>Nero</i>, <span epub:type="z3998:roman">xvi</span>.2. <a href="book-8.xhtml#noteref-916" epub:type="se:referrer">↩</a></p>
@@ -2915,7 +2915,7 @@
 					<p>Votive shields, adorned with the emperor’s image; see <i>Calig.</i> <span epub:type="z3998:roman">xvi</span>.4. <a href="book-8.xhtml#noteref-966" epub:type="se:referrer">↩</a></p>
 				</li>
 				<li id="note-967" epub:type="endnote">
-					<p>The Capitoline hill was sometimes called <i xml:lang="la">mons Tarpeius</i>, from the Tarpeian Rock at its south-west corner. It was not, however, the original name of the hill, as some Roman antiquarians supposed. <a href="book-8.xhtml#noteref-967" epub:type="se:referrer">↩</a></p>
+					<p>The Capitoline hill was sometimes called <i xml:lang="la">mons Tarpeius</i>, from the Tarpeian Rock at its southwest corner. It was not, however, the original name of the hill, as some Roman antiquarians supposed. <a href="book-8.xhtml#noteref-967" epub:type="se:referrer">↩</a></p>
 				</li>
 			</ol>
 		</section>
