--- a/src/epub/text/endnotes.xhtml
+++ b/src/epub/text/endnotes.xhtml
@@ -1379,7 +1379,7 @@
 				</li>
 				<!--end of notes on Caligula-->
 				<li id="note-454" epub:type="endnote">
-					<p><bookmark>See</bookmark> <i epub:type="se:name.publication.book">Augustus</i>, <a href="book-2.xhtml#chapter-2-62"><span epub:type="z3998:roman">lxii</span>.2</a>. <a href="book-5.xhtml#noteref-454" epub:type="se:referrer">↩</a></p>
+					<p>See <i epub:type="se:name.publication.book">Augustus</i>, <a href="book-2.xhtml#chapter-2-62"><span epub:type="z3998:roman">lxii</span>.2</a>. <a href="book-5.xhtml#noteref-454" epub:type="se:referrer">↩</a></p>
 				</li>
 				<li id="note-455" epub:type="endnote">
 					<p>Literally, “the blest,” those on whom fortune smiles. <a href="book-5.xhtml#noteref-455" epub:type="se:referrer">↩</a></p>
@@ -2805,9 +2805,7 @@
 					<p>As censor. <a href="book-8.xhtml#noteref-926" epub:type="se:referrer">↩</a></p>
 				</li>
 				<li id="note-927" epub:type="endnote">
-					<p>
-						<i xml:lang="la">De nefanda Venere</i>. <a href="book-8.xhtml#noteref-927" epub:type="se:referrer">↩</a>
-					</p>
+					<p><i xml:lang="la">De nefanda Venere</i>. <a href="book-8.xhtml#noteref-927" epub:type="se:referrer">↩</a></p>
 				</li>
 				<li id="note-928" epub:type="endnote">
 					<p><i epub:type="se:name.publication.book">Georgicon</i> 2.537. <a href="book-8.xhtml#noteref-928" epub:type="se:referrer">↩</a></p>
