Fixed error in endnotes.

--- a/src/epub/text/endnotes.xhtml
+++ b/src/epub/text/endnotes.xhtml
@@ -37,7 +37,7 @@
 					<p>As <i xml:lang="la">iudex perduellionis</i>, or <i xml:lang="la">duumvir perduellionis</i>, one of a commission of two men appointed to try cases of high treason. Of these one was selected by lot (<i xml:lang="la">sorte ductus</i>) to conduct the trial, if one were necessary, and pass sentence. An appeal was allowed and the duumvir then brought the case before the <i xml:lang="la">comitia centuriata</i> (in the regal period before the <i xml:lang="la">comitia curiata</i>). See Livy 1.26.5 <abbr class="eoc">ff.</abbr>; Cicero, <i epub:type="se:name.publication.book">Pro Rabirio Perduellionis Reo</i> 4. <a href="book-1.xhtml#noteref-9" epub:type="se:referrer">↩</a></p>
 				</li>
 				<li id="note-10" epub:type="endnote">
-					<p>As governor of Egypt; see <i epub:type="se:name.publication.book">Julius</i>, <a href="book-1.xhtml#chapter-11"><span epub:type="z3998:roman">xi</span></a>. <a href="book-1.xhtml#noteref-10" epub:type="se:referrer">↩</a></p>
+					<p>As governor of Egypt; see <i epub:type="se:name.publication.book">Julius</i>, <a href="book-1.xhtml#book-1-11"><span epub:type="z3998:roman">xi</span></a>. <a href="book-1.xhtml#noteref-10" epub:type="se:referrer">↩</a></p>
 				</li>
 				<li id="note-11" epub:type="endnote">
 					<p>Namely, Gnaeus Pompeius. <a href="book-1.xhtml#noteref-11" epub:type="se:referrer">↩</a></p>
