Proof-reading all.

--- a/src/epub/text/book-4.xhtml
+++ b/src/epub/text/book-4.xhtml
@@ -47,7 +47,7 @@
 						<p>Gaius Caesar was born the day before the Kalends of September in the consulship of his father and Gaius Fonteius Capito. Conflicting testimony makes his birthplace uncertain. Gnaeus Lentulus Gaetulicus writes that he was born at Tibur, Plinius Secundus among the Treveri, in a village called Ambitarvium above the Confluence. Pliny adds as proof that altars are shown there, inscribed “For the Delivery of Agrippina.” Verses which were in circulation soon after he became emperor indicate that he was begotten in the winter-quarters of the legions:</p>
 						<blockquote epub:type="z3998:verse">
 							<p>
-								<span>“He who was born in the camp and reared ‘mid the arms of his country,</span>
+								<span>“He who was born in the camp and reared ’mid the arms of his country,</span>
 								<br/>
 								<span>Gave at the outset a sign that he was fated to rule.”</span>
 							</p>
@@ -301,7 +301,7 @@
 						</p>
 					</li>
 					<li id="book-4-59">
-						<p>He lived twenty-nine years and ruled three years, ten months and eight days. His body was conveyed secretly to the gardens of the Lamian family, where it was partly consumed on a hastily erected pyre and buried beneath a light covering of turf; later his sisters on their return from exile dug it up, cremated it, and consigned it to the tomb. Before this was done, it is well known that the caretakers of the gardens were disturbed by ghosts, and that in the house where he was slain not a night passed without some fearsome apparition,’ until at last the house itself was destroyed by fire. With him died his wife Caesonia, stabbed with a sword by a centurion, while his daughter’s brains were dashed out against a wall.</p>
+						<p>He lived twenty-nine years and ruled three years, ten months and eight days. His body was conveyed secretly to the gardens of the Lamian family, where it was partly consumed on a hastily erected pyre and buried beneath a light covering of turf; later his sisters on their return from exile dug it up, cremated it, and consigned it to the tomb. Before this was done, it is well known that the caretakers of the gardens were disturbed by ghosts, and that in the house where he was slain not a night passed without some fearsome apparition, until at last the house itself was destroyed by fire. With him died his wife Caesonia, stabbed with a sword by a centurion, while his daughter’s brains were dashed out against a wall.</p>
 					</li>
 					<li id="book-4-60">
 						<p>One may form an idea of the state of those times by what followed. Not even after the murder was made known was it at once believed that he was dead, but it was suspected that Gaius himself had made up and circulated the report, to find out by that means how men felt towards him. The conspirators too had not agreed on a successor, and the senate was so unanimously in favour of reestablishing the republic that the consuls called the first meeting, not in the senate house, because it had the name Julia, but in the Capitol; while some in expressing their views proposed that the memory of the Caesars be done away with and their temples destroyed. Men further observed and commented on the fact that all the Caesars whose forename was Gaius perished by the sword, beginning with the one who was slain in the times of Cinna.<a href="endnotes.xhtml#note-454" id="noteref-454" epub:type="noteref">454</a></p>
